--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
 <body class="page__body">
   <div class="site-container">
     @include('partials/header.html')
+    <main>
+      @include('partials/experience.html')
+    </main>
     <!-- @include('partials/h1.html') пример include -->
   </div>
 </body>
