--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     @include('partials/header.html')
     <main>
       @include('partials/experience.html')
+      @include('partials/advices.html')
     </main>
     <!-- @include('partials/h1.html') пример include -->
   </div>
