--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <main>
       @include('partials/experience.html')
       @include('partials/advices.html')
+      @include('partials/about.html')
+      @include('partials/partners.html')
     </main>
     <!-- @include('partials/h1.html') пример include -->
   </div>
