--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       @include('partials/advices.html')
       @include('partials/about.html')
       @include('partials/partners.html')
+      @include('partials/in-touch.html')
     </main>
     <!-- @include('partials/h1.html') пример include -->
   </div>
