--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       @include('partials/partners.html')
       @include('partials/in-touch.html')
     </main>
+    @include('partials/footer.html')
     <!-- @include('partials/h1.html') пример include -->
   </div>
 </body>
